--- a/home.html
+++ b/home.html
@@ -3,11 +3,16 @@
 
 <head>
     <title>Basic home page</title>
+    <img src="dani.jpg" alt="dani's picture">
     <style>
         h1,
         h2 {
             color: rgb(17, 17, 153);
             text-align: center;
+        }
+        
+        img {
+            border-radius: 10px;
         }
     </style>
 </head>
